<resources>
    <string name="app_name">Dumchar Markup Info</string>

    <string name="dismissDialog" translatable="false">OK</string>
    <string name="version">Version %1$s</string>
    <string name="createdBy" translatable="false">andreya108@4pda/xda</string>
    <string name="action_about">About</string>
    <string name="error_title">Error!</string>
    <string name="error_info">Unfortunately, it seems that your device is not supported. This application was designed for Lenovo P780 (MT6589 SOC)</string>
    <string name="app_info">This application was designed for Lenovo P780 (MT6589 SOC), to make some order in available memory makrups mess.</string>

    <string name="label_android" translatable="false">/system</string>
    <string name="label_usrdata" translatable="false">/data</string>
    <string name="label_fat" translatable="false">emmc@fat</string>

    <string name="markup_cn" translatable="false">CN</string>
    <string name="markup_row" translatable="false">ROW</string>
    <string name="markup_plus" translatable="false">+</string>
    <string name="markup_unknown" translatable="false">\?</string>
    <string name="action_mmc_info">MMC Info</string>
    <string name="unknown">unknown</string>
    <string name="chipId">MMC Chip ID:</string>
    <string name="vendor">Vendor:</string>
    <string name="parnNumber">Part Number:</string>
    <string name="serial">Serial:</string>
    <string name="date">Date:</string>
    <string name="name">Name:</string>
    <string name="wrong_markup">Chip size and markup calculated size does not match! Possibly wrong markup flashed!</string>
    <string name="markupTab">Markup</string>
    <string name="mmcTab">EMMC</string>
    <string name="aboutTab">About</string>
    <string name="markup_info">%1$s %2$dGb</string>
    <string name="total_size">%1$d Gb (strictly %2$d Mb)</string>
    <string name="size_mb">%1$d Mb</string>
</resources>
