<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_name"
            android:id="@+id/appName"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:id="@+id/version"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/createdBy"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <Button
        android:id="@+id/aboutDialogBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dismissDialog" />
</LinearLayout>